# predicta

./: .dockerignore  .gitignore  .railwayignore  Dockerfile  LICENSE  advanced_feature_engineer.py  ai_config.json  ai_engine.py  auto_league_mapper.py  auto_train.py  collectapi_service.py  create_folders.py  data_scraper.py  database_manager.py  enhanced_feature_engineer.py  enhanced_feature_engineer_v4.py  enhanced_predictor.py  enhanced_score_predictor.py  gunicorn.config  historical_processor.py  improved_prediction_engine.py  index.html  main.py  main_railway.py  ml_prediction_engine.py  model_trainer.py  nesine_fetcher.py  nesine_fetcher_complete.py  nesine_match_fetcher.py  nixpacks.toml  prediction_engine.py  prediction_tracker.py  pyproject.toml  railway.json  railway.toml  railway_startup.py  railway_train.py  raw_data_parser.py  render.yaml  requirements.txt  (+4 more)
data/: create_models_folder.py  nesine_advanced.db
data/ai_models_v2/: training_metadata.json
data/ai_models_v3/: enhanced_feature_data_v4.pkl  ensemble_models.pkl  feature_config.json  gradient_boost.pkl  lightgbm.pkl  meta_ensemble.pkl  random_forest.pkl  scaler.pkl  training_metadata.json  xgboost.pkl
data/clubs/: all_clubs.csv
data/kings_cup/: results.csv
data/kirin_challenge_cup/: results.csv
data/korea_cup/: results.csv
data/latvia/: results.csv
data/liechtenstein/: results.csv
data/luxembourg/: results.csv
data/malta_international_tournament/: results.csv
predicta-main/: index.html  main.py  nesine_fetcher_complete.py  requirements.txt
templates/: index.html
(+231 files in other folders)
